--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Hello World</h1>
     <hr style="color: blueviolet; height: 3px; background-color: blueviolet;">
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas expedita unde amet quo voluptatum in quidem, ea qui atque maxime quas dicta ex.</p>
+    <h5>New Text.</h5>
     <script src="./script.js"></script>
 </body>
 </html>
